Fix stretch

--- a/client/src/components/outlet/Header/header.module.css
+++ b/client/src/components/outlet/Header/header.module.css
@@ -8,12 +8,13 @@
     flex-direction: column;
     position: sticky;
     top: 0;
-    width: 100vw;
+    max-width: 100vw;
     justify-content: space-evenly;
     align-items: center;
     background-color: #131313;
     gap: 3em;
     padding: 0 1.5em;
+    z-index: 9999;
 }
 
 
