--- a/client/src/global.css
+++ b/client/src/global.css
@@ -1,15 +1,20 @@
+@import url('https://fonts.cdnfonts.com/css/im-fell-french-canon-2');
+
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'IM FELL French Canon', sans-serif;
+  user-select: none;
 }
 
 html,body{
   background-color: whitesmoke;
   font: 16px/1.5 sans-serif;
-  min-height: 100vh;
-  min-width: 100vw;
+  /* min-height: 100vh;
+  min-width: 100vw; */
   /* max-width: 100vw; */
+  /* overflow-x: hidden; */
 }
 
 button{
